--- a/src/public/style.css
+++ b/src/public/style.css
@@ -22,3 +22,50 @@ div img {
     margin-right: auto;
     display: block;
 }
+
+.button {
+    background-color: #AB4642;
+    color: #bcbcbc;
+    border-radius: 12px;
+    font-size: 18px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    padding: 7px;
+}
+
+.button {
+    transition-duration: 0.4s;
+}
+
+.button:active {
+    background-color: #AB4624;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+
+.button:hover {
+    background-color: darkred;
+}
+
+body {
+    background-color: #383838;
+}
+
+.text {
+    color: #B8B8B8;
+}
+
+h3 {
+    display: block;
+    font-size: 2em;
+    font-weight: bold;
+    color: #B8B8B8;
+}
+
+.input {
+    color: darkslategrey;
+    background-color: #a9a9a9;
+    border-radius: 12px;
+    font-size: 18px;
+    padding: 5px;
+}
