--- a/src/public/style.css
+++ b/src/public/style.css
@@ -28,9 +28,11 @@ div img {
     color: #bcbcbc;
     border-radius: 12px;
     font-size: 18px;
+    font-family: "Helvetica Neue", sans-serif;
     margin-bottom: 30px;
     margin-right: 20px;
     padding: 7px;
+    width: 130px;
 }
 
 .button {
@@ -53,12 +55,14 @@ body {
 
 .text {
     color: #B8B8B8;
+    font-family: "Helvetica Neue", sans-serif;
 }
 
 h3 {
     display: block;
     font-size: 2em;
     font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
     color: #B8B8B8;
 }
 
@@ -67,6 +71,7 @@ h3 {
     background-color: #a9a9a9;
     border-radius: 12px;
     font-size: 18px;
+    font-family: "Helvetica Neue", sans-serif;
     padding: 5px;
 }
 
@@ -75,6 +80,7 @@ h3 {
     color: #bcbcbc;
     border-radius: 4px;
     font-size: 18px;
+    font-family: "Helvetica Neue", sans-serif;
     margin-bottom: 30px;
     margin-right: 20px;
     padding: 3px;
@@ -85,17 +91,116 @@ h3 {
     color: #bcbcbc;
     border-radius: 4px;
     font-size: 18px;
+    font-family: "Helvetica Neue", sans-serif;
     margin-bottom: 30px;
     margin-right: 20px;
     padding: 3px;
 }
 
-nav ul {
+nav ol {
     height:200px;
     width:30%;
     background-color: #666666;
 }
-nav ul {
+nav ol {
     overflow:hidden;
     overflow-y:scroll;
+}
+
+ol {
+    list-style-type: none;
+    counter-reset: li;
+}
+
+li {
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 95%;
+    color: #B8B8B8;
+    padding-bottom: 0.25em;
+}
+
+li:before {
+    counter-increment: li;
+    content: counter(li, decimal-leading-zero);
+    font-size: 1.3rem;
+    text-align: right;
+    font-weight: bold;
+    min-width: 50px;
+    padding-right: 12px;
+    background-color: #AB4642;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+li + li {
+    border-top: 2px solid rgba(255,255,255,0.2);
+}
+
+/* SVG */
+.ease {
+    transition: all 300ms ease;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 70px;
+    height: 50px;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 7px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #8a8a8a;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 40px;
+    width: 40px;
+    left: 1px;
+    bottom: 1px;
+    background-color: darkolivegreen;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: #8a8a8a;
+}
+
+/*SVG code and styling thanks to https://stackoverflow.com/questions/58332799/how-can-i-add-an-svg-to-a-toggle-button*/
+input:checked + .slider:before {
+    background-color: darkgray;
+    content: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'><path d='M23 0l-15.996 3.585v13.04c-2.979-.589-6.004 1.671-6.004 4.154 0 2.137 1.671 3.221 3.485 3.221 2.155 0 4.512-1.528 4.515-4.638v-10.9l12-2.459v8.624c-2.975-.587-6 1.664-6 4.141 0 2.143 1.715 3.232 3.521 3.232 2.14 0 4.476-1.526 4.479-4.636v-17.364z'/></svg>");
+    margin:auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 30px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
